--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,30 +1,33 @@
-.footer  {
-    min-height: 100vh;
-    position: relative;
-    background-color: transparent;
-  }
+.footer {
+  min-height: 100vh;
+  position: relative;
+  background-color: transparent;
+}
 
-  .footer div {
-    z-index: 1;
-  }
-  .footer a {
-    display: flex;
-    justify-content: flex-start;
-   
-  }
-  .footer img {
-    height: 40px;
-    margin: 15px;
-    transition: transform 0.2s ease-out;
-  }
-  
-  .footer img:hover {
-    transform: scale(1.3);
-  }
+.rrhh__img {
+  z-index: 20;
+  transform: scale(1);
+  transition: transform 0.2s ease-out;
+  padding: 10px;
 
-  .bottom_line_animation {
-    position: relative;
-    
-  }
- 
+  background-color: rgba(0, 0, 0, 0.7);  /* Aumenta la opacidad a 0.7 para oscurecer el fondo */
+  border-radius: 10px;
+  backdrop-filter: blur(20px) saturate(150%);
+}
+
+.rrhh__img:hover {
+  transform: scale(1.3);
+}
+
+.copyRight__link {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);  /* Aumenta la opacidad a 0.7 para oscurecer el fondo */
+  border-radius: 10px; 
+  z-index: 20;
+  font-weight: bold;
+}
 
